[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-windows-cuda"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["mamba_windows_cuda", "mamba_windows_cuda.*"] } }