[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba-windows-cuda"
version = "0.1.0"
description = "Windows-compatible CUDA implementation of Mamba selective-scan operation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["mamba", "cuda", "selective-scan", "ssm", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/zouyuanqing/mamba-windows-cuda"
Repository = "https://github.com/zouyuanqing/mamba-windows-cuda"
Issues = "https://github.com/zouyuanqing/mamba-windows-cuda/issues"

[tool.setuptools.packages.find]
include = ["mamba_windows_cuda*"]
